[package]
name = "rlox"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "debug" ] 
debug = [ "trace_execution", "print_code"]
debug_gc = ["stress_gc", "log_gc"]
trace_execution = []
print_code = []
stress_gc = []
log_gc = []
# Is not compatible with debugging feature.

[dependencies]
cfg-if = "1.0.0"
